Fixed a bug in the menu bar, removed one css file (can use one for all views), fixed overflow-y scroll bug, added dummy content to home page for testing

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald);
+body {
+  overflow-y: scroll;
+}
 #cssmenu,
 #cssmenu ul,
 #cssmenu ul li,
@@ -72,11 +75,11 @@
   transform-style: preserve-3d;
 }
 #cssmenu > ul > li.active > a {
-  color: #dff2fa;
+  color: black;
 }
 #cssmenu > ul > li:hover > a,
 #cssmenu > ul > li > a:hover {
-  color: #dff2fa;
+  color: black;
   -webkit-transform: rotateX(90deg) translateY(-23px);
   -moz-transform: rotateX(90deg) translateY(-23px);
   transform: rotateX(90deg) translateY(-23px);
@@ -180,10 +183,35 @@
 }
 
 #logo {
-  height:5em;
+  height:7em;
   width:100%;
 
-  background-image: url("logo.png");
+  background-image: url("logo4.png");
   background-repeat: no-repeat;
   background-position:center;
+}
+
+.user-new {
+  width:30%;
+  margin-left:auto;
+  margin-right:auto;
+}
+.form-buttons {
+  width:100%;
+}
+.btn-submit {
+  float:left;
+}
+
+#left-col {
+  float:left;
+  padding-top:1em;
+  width:20%;
+  height:auto;
+}
+#right-col {
+  float:right;
+  padding-top:1em;
+  width:20%;
+  height:auto;
 }
